[package]
name = "get-threads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "*", features = ["client", "http1", "tcp"] }
hyper-tls = "*"
tokio = "*"
simplelog = { version = "*"}
log = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = "*"
